<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GarageBand</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_room">Create Room</string>
    <string name="join_room">Join Room</string>
    <string name="playback">Playback</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="waiting">Waiting for others to join...</string>
    <string name="searching">Searching for rooms to join...</string>

</resources>
